plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'ru.normacontrol'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ── Spring Boot Starters ──────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // ── WebSocket ─────────────────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // ── Kafka ─────────────────────────────────────────────────────────
    implementation 'org.springframework.kafka:spring-kafka'

    // ── Database ──────────────────────────────────────────────────────
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.liquibase:liquibase-core'

    // ── MinIO (S3-совместимое хранилище) ──────────────────────────────
    implementation 'io.minio:minio:8.5.9'

    // ── JWT ───────────────────────────────────────────────────────────
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // ── OpenAPI / Swagger UI ──────────────────────────────────────────
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // ── Документы: DOCX + PDF ─────────────────────────────────────────
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    implementation 'org.apache.pdfbox:pdfbox:3.0.2'

    // ── MapStruct ─────────────────────────────────────────────────────
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // ── AI & Rate Limiting (WebClient & Bucket4j) ─────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.bucket4j:bucket4j-core:8.10.1'

    // ── Lombok ────────────────────────────────────────────────────────
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // ── Тесты ─────────────────────────────────────────────────────────
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
